<resources>
    <string name="app_name">Simplify</string>

    <string name="back_button">Back Button</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_title">Nature\'s way to organize.</string>
    <string name="main_google">Continue with Google</string>
    <string name="main_facebook">Continue with Facebook</string>

    <string name="login_title">Log in</string>
    <string name="login_subtitle">Please sign in.</string>
    <string name="login_email">Email or username</string>

    <string name="signup_title">Sign up</string>
    <string name="signup_subtitle">Please sign up.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Username</string>

    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_community">Community</string>
    <string name="title_premium">Premium</string>

    <string name="acc_name">Marius Gabriel</string>
    <string name="acc_points">82</string>
    <string name="acc_donate">Donate</string>
    <string name="acc_share">Share</string>
    <string name="acc_review">Review</string>
    <string name="acc_settings">Settings</string>

    <string name="home_search">Search</string>
    <string name="home_notes">Notes</string>
    <string name="home_assistant">Assistant</string>
    <string name="home_tasks">Tasks</string>
    <string name="home_all">All</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_search_notes">Search notes</string>
    <string name="home_add_note">Add Note</string>
    <string name="home_note_title">Note Title</string>
    <string name="home_note_subtitle">Note Subtitle</string>
    <string name="home_type_note_here">Type note here...</string>
    <string name="create_note_add">Add</string>



    <string name="id_AppOpenAdd">ca-app-pub-8447567589954533/1110300440</string>
    <string name="id_InterstitialAdd">ca-app-pub-8447567589954533/4813170916</string>

    <string name="default_web_client_id">986100332858-1g2r9kcaq7vm7baqvvuc62gt0pdqf80m.apps.googleusercontent.com</string>

    <string name="facebook_app_id">2109357539444062</string>
    <string name="fb_login_protocol_scheme">fb2109357539444062</string>
    <string name="facebook_client_token">e0c5329da6c1f8460ece709873ff9cf8</string>

    <string name="gemini_api">AIzaSyAARirP0Qk9W3cCXf0h6UddVzMlIizD9s4</string>

</resources>
